# llm-zoomcamp-2026-code

./: .gitignore  01-persistent_rag.ipynb  02-00-embedding-transformers.ipynb  02-01-using-sqlitesearch-vector-search-in-RAG.ipynb  02-embedding-transformers.ipynb  README.md  data-talks-llm.ipynb  main.py  pyproject.toml  rag_helper.py  sqlite-ingest.ipynb  test_rag_helper.ipynb
