[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "For learning LLMs from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.8.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "openai-agents>=0.17.6",
    "pydantic-ai>=1.107.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.1",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]
